--- a/app/templates/frontend/client_detail.html
+++ b/app/templates/frontend/client_detail.html
@@ -19,53 +19,85 @@
                      <div class="tab-content" id="pills-tabContent">
 
                         <div class="tab-pane fade show active" id="pills-order-online" role="tabpanel" aria-labelledby="pills-order-online-tab">
-                           <div id="#menu" class="bg-white rounded shadow-sm p-4 mb-4 explore-outlets">
+                           <div id="menu" class="bg-white rounded shadow-sm p-4 mb-4 explore-outlets">
+                              <h6 class="mb-3">Am beliebtesten <span class="badge badge-success"><i class="icofont-tags"></i> 15% Off All Items</span></h6>
                               
-                              
-                              <h6 class="mb-3">Most Popular  <span class="badge badge-success"><i class="icofont-tags"></i> 15% Off All Items </span></h6>
+                              <!-- Überprüfen, ob es "Most Popular"-Produkte gibt -->
+                              {% if most_popular_products %}
                               <div class="owl-carousel owl-theme owl-carousel-five offers-interested-carousel mb-3">
-                                 <div class="item">
-                                    <div class="mall-category-item">
-                                       <a href="#">
-                                          <img class="img-fluid" src="img/list/1.png">
-                                          <h6>Burgers</h6>
-                                          <small>5 ITEMS</small>
-                                       </a>
-                                    </div>
-                                 </div>
-                                 
-                                 
-                                 
-                                 
+                                  <!-- Iteriere über alle "Most Popular"-Produkte des Clients -->
+                                  {% for product in most_popular_products %}
+                                  <div class="item">
+                                      <div class="mall-category-item">
+                                          <a href="#">
+                                              <!-- Produktbild anzeigen, falls vorhanden -->
+                                              {% if product.image %}
+                                                  <img class="img-fluid" src="{{ url_for('static', filename='upload/client_produktbilder/' ~ product.client_id ~ '/' ~ product.image) }}" alt="{{ product.name }}">
+                                              {% else %}
+                                                  <img class="img-fluid" src="{{ url_for('static', filename='frontend/themes/img/default-product.jpg') }}" alt="{{ product.name }}">
+                                              {% endif %}
+                                              
+                                              <!-- Produktname anzeigen -->
+                                              <h6>{{ product.name }}</h6>
+                                              <!-- Produktpreis anzeigen -->
+                                              <small>{{ product.price }} €</small>
+                                          </a>
+                                      </div>
+                                  </div>
+                                  {% endfor %}
                               </div>
-                           </div>
-                           <div class="row">
-                              
-                              <div class="col-md-4 col-sm-6 mb-4">
-                                 <div class="list-card bg-white h-100 rounded overflow-hidden position-relative shadow-sm">
-                                    <div class="list-card-image">
-                                       <div class="star position-absolute"><span class="badge badge-success"><i class="icofont-star"></i> 3.1 (300+)</span></div>
-                                       <div class="favourite-heart text-danger position-absolute"><a href="#"><i class="icofont-heart"></i></a></div>
-                                       <div class="member-plan position-absolute"><span class="badge badge-dark">Promoted</span></div>
-                                       <a href="#">
-                                       <img src="img/list/7.png" class="img-fluid item-img">
-                                       </a>
-                                    </div>
-                                    <div class="p-3 position-relative">
-                                       <div class="list-card-body">
-                                          <h6 class="mb-1"><a href="#" class="text-black">Bite Me Sandwiches</a></h6>
-                                          <p class="text-gray mb-2">North Indian • Indian</p>
-                                          <p class="text-gray time mb-0"><a class="btn btn-link btn-sm text-black" href="#">$550 <span class="badge badge-success">NEW</span></a>  <span class="float-right"> 
-                                             <a class="btn btn-outline-secondary btn-sm" href="#">ADD</a>
-                                             </span>
-                                          </p>
+                              {% else %}
+                                  <!-- Nachricht anzeigen, falls keine "Most Popular"-Produkte vorhanden sind -->
+                                  <p>Derzeit keine "Most Popular"-Produkte verfügbar.</p>
+                              {% endif %}
+                          </div>
+                          
+                          <div class="row">
+                           <!-- Überprüfen, ob es "Bestseller"-Produkte gibt -->
+                           {% if bestseller_products %}
+                               <!-- Iteriere über alle "Bestseller"-Produkte des Clients -->
+                               {% for product in bestseller_products %}
+                               <div class="col-md-4 col-sm-6 mb-4">
+                                   <div class="list-card bg-white h-100 rounded overflow-hidden position-relative shadow-sm">
+                                       <div class="list-card-image">
+                                           
+                                           <div class="favourite-heart text-danger position-absolute">
+                                               <a href="#"><i class="icofont-heart"></i></a>
+                                           </div>
+                                           
+                                           <a href="#">
+                                               <!-- Produktbild anzeigen, falls vorhanden -->
+                                               {% if product.image %}
+                                                   <img src="{{ url_for('static', filename='upload/client_produktbilder/' ~ product.client_id ~ '/' ~ product.image) }}" class="img-fluid item-img" alt="{{ product.name }}">
+                                               {% else %}
+                                                   <img src="{{ url_for('static', filename='frontend/themes/img/default-product.jpg') }}" class="img-fluid item-img" alt="{{ product.name }}">
+                                               {% endif %}
+                                           </a>
                                        </div>
-                                    </div>
-                                 </div>
-                              </div>
-                              
-                              
-                           </div>
+                                       <div class="p-3 position-relative">
+                                           <div class="list-card-body">
+                                               <!-- Produktname anzeigen -->
+                                               <h6 class="mb-1"><a href="#" class="text-black">{{ product.name }}</a></h6>
+                                               <!-- Produktbeschreibung anzeigen -->
+                                               <p class="text-gray mb-2">{{ product.description }}</p>
+                                               <!-- Produktpreis anzeigen -->
+                                               <p class="text-gray time mb-0">
+                                                   <a class="btn btn-link btn-sm text-black" href="#">{{ product.price }} €</a>
+                                                   <span class="float-right"> 
+                                                       <a class="btn btn-outline-secondary btn-sm" href="#">ADD</a>
+                                                   </span>
+                                               </p>
+                                           </div>
+                                       </div>
+                                   </div>
+                               </div>
+                               {% endfor %}
+                           {% else %}
+                               <!-- Nachricht anzeigen, falls keine "Bestseller"-Produkte vorhanden sind -->
+                               <p class="col-12">Derzeit keine "Bestseller"-Produkte verfügbar.</p>
+                           {% endif %}
+                       </div>
+                       
                            
 
                            <div class="row">
@@ -73,37 +105,42 @@
                         </div>
                         
                         {% for category in categories %}
-                            <!-- Überprüfen, ob die Kategorie Produkte enthält -->
-                            {% if category.products | length > 0 %}
-                            <div class="row">
-                                <!-- Kategoriename anzeigen -->
-                                <h5 class="mb-4 mt-3 col-md-12">{{ category.name }} <small class="h6 text-black-50">{{ category.products | length }} Produkt</small></h5>
-                        
-                                <!-- Iteriere über die Produkte der jeweiligen Kategorie -->
-                                <div class="col-md-12">
-                                    <div class="bg-white rounded border shadow-sm mb-4">
-                                        {% for product in category.products %}
-                                        <div class="menu-list p-3 border-bottom">
-                                            <!-- Produkt hinzufügen Button -->
-                                            <a class="btn btn-outline-secondary btn-sm float-right" href="#">ADD</a>
-                                            <div class="media">
-                                                <!-- Beispielbild: Ändere src, um das Produktbild anzuzeigen -->
-                                                <img class="mr-3 rounded-pill" src="{{ url_for('static', filename='frontend/themes/img/5.jpg') }}" alt="{{ product.name }}">
-                        
-                                                <!-- Produktdetails anzeigen -->
-                                                <div class="media-body">
-                                                    <h6 class="mb-1">{{ product.name }}</h6>
-                                                    <p class="text-gray mb-0">{{ product.price }}0 € {% if product.size %} - {{ product.size }} {% endif %}</p>
+    <!-- Überprüfen, ob die Kategorie Produkte enthält -->
+    {% if category.products | length > 0 %}
+    <div class="row">
+        <!-- Kategoriename anzeigen -->
+        <h5 class="mb-4 mt-3 col-md-12">{{ category.name }} <small class="h6 text-black-50">{{ category.products | length }} Produkt{% if category.products | length > 1 %}e{% endif %}</small></h5>
 
-                                                </div>
-                                            </div>
-                                        </div>
-                                        {% endfor %}
-                                    </div>
-                                </div>
-                            </div>
-                            {% endif %}
-                        {% endfor %}
+        <!-- Iteriere über die Produkte der jeweiligen Kategorie -->
+        <div class="col-md-12">
+            <div class="bg-white rounded border shadow-sm mb-4">
+                {% for product in category.products %}
+                <div class="menu-list p-3 border-bottom">
+                    <!-- Produkt hinzufügen Button -->
+                    <a class="btn btn-outline-secondary btn-sm float-right" href="#">ADD</a>
+                    <div class="media">
+                        <!-- Produktbild anzeigen -->
+                        {% if product.image %}
+                            <img class="mr-3 rounded-pill" src="{{ url_for('static', filename='upload/client_produktbilder/' ~ product.client_id ~ '/' ~ product.image) }}" alt="{{ product.name }}" style="width: 50px; height: 50px;">
+                        {% else %}
+                            <!-- Platzhalterbild anzeigen, falls kein Produktbild vorhanden ist -->
+                            <img class="mr-3 rounded-pill" src="{{ url_for('static', filename='frontend/themes/img/default-product.jpg') }}" alt="{{ product.name }}" style="width: 100px; max-height: 100px;">
+                        {% endif %}
+                        
+                        <!-- Produktdetails anzeigen -->
+                        <div class="media-body">
+                            <h6 class="mb-1">{{ product.name }}</h6>
+                            <p class="text-gray mb-0">{{ product.price }}0 € {% if product.size %} - {{ product.size }} {% endif %}</p>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    {% endif %}
+{% endfor %}
+
                         
 
                            
