--- a/app/templates/backend/client_templates/edit_category.html
+++ b/app/templates/backend/client_templates/edit_category.html
@@ -1,6 +1,9 @@
 {% extends "client_dashboard/layout/base.html" %}
 
 {% block content %}
+<div class="row">
+    <div class="col-12 col-xl-12">
+        <div class="card card-body border-0 shadow mb-4">
 <h1>Kategorie bearbeiten</h1>
 <form action="{{ url_for('client_category_bp.edit_category', id=category.id) }}" method="POST">
     <div class="mb-3">
@@ -10,4 +13,7 @@
     <button type="submit" class="btn btn-success">Änderungen speichern</button>
     <a href="{{ url_for('client_category_bp.view_categories') }}" class="btn btn-secondary">Abbrechen</a>
 </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
