--- a/app/static/frontend/themes/css/osahan.css
+++ b/app/static/frontend/themes/css/osahan.css
@@ -204,7 +204,7 @@ img{
 }
 /* Homepage Search Block */
 .homepage-header{
-    background: url(../img/bg.png);
+    background: url(../img/858236.jpg);
     position: relative;
     background-repeat: no-repeat;
     background-position: center;
