--- a/app/templates/frontend/home.html
+++ b/app/templates/frontend/home.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="section-header text-center">
             <h2>Lieblings Restaurants</h2>
-            <p>Top restaurants, cafes, pubs, and bars in Ludhiana, based on trends</p>
+            <p>Listen der besten Restaurants, Cafés und Bars in Deutschland</p>
             <span class="line"></span>
         </div>
         <div class="row">
