--- a/app/templates/frontend/layout/banner.html
+++ b/app/templates/frontend/layout/banner.html
@@ -28,7 +28,7 @@
                                    <a class="locate-me" href="#"><i class="icofont-ui-pointer"></i> Mein Standort</a>
                                </div>
                                <div class="col-lg-2 col-md-2 col-sm-12 form-group">
-                                   <a href="listing.html" class="btn btn-primary btn-block btn-lg btn-gradient">Search</a>
+                                   <a href="listing.html" class="btn btn-primary btn-block btn-lg btn-gradient">Suchen</a>
                                </div>
                            </div>
                        </form>
