--- a/app/templates/frontend/layout/footer.html
+++ b/app/templates/frontend/layout/footer.html
@@ -1,68 +1,61 @@
-<section class="section pt-5 pb-5 text-center bg-white">
-    <div class="container">
-       <div class="row">
-          <div class="col-sm-12">
-             <h5 class="m-0">Operate food store or restaurants? <a href="login.html">Work With Us</a></h5>
-          </div>
-       </div>
-    </div>
- </section>
+
  <section class="footer pt-5 pb-5">
     <div class="container">
        <div class="row">
           <div class="col-md-4 col-12 col-sm-12">
-             <h6 class="mb-3">Subscribe to our Newsletter</h6>
+             <h6 class="mb-3">Abonnieren unsere Newsletter</h6>
              <form class="newsletter-form mb-1">
                 <div class="input-group">
-                   <input type="text" placeholder="Please enter your email" class="form-control">
+                   <input type="text" placeholder="Geben Sie Ihre E-Mail ein" class="form-control">
                    <div class="input-group-append">
                       <button type="button" class="btn btn-primary">
-                      Subscribe
+                      abonnieren
                       </button>
                    </div>
                 </div>
              </form>
-             <p><a class="text-info" href="register.html">Register now</a> to get updates on <a href="offers.html">Offers and Coupons</a></p>
+             <p>Sie bekommen unsere aktuellsten Angebote</p>
              <div class="app">
-                <p class="mb-2">DOWNLOAD APP</p>
+                <p class="mb-2">Laden Sie unsere APP herunter</p>
                 <a href="#">
-                <img class="img-fluid" src="img/google.png">
+                <img class="img-fluid" src="{{ url_for('static', filename='frontend/themes/img/google.png')}}">
+                
                 </a>
                 <a href="#">
-                <img class="img-fluid" src="img/apple.png">
+                <img class="img-fluid" src="{{ url_for('static', filename='frontend/themes/img/apple.png')}} ">
                 </a>
              </div>
           </div>
           <div class="col-md-1 col-sm-6 mobile-none">
           </div>
           <div class="col-md-2 col-6 col-sm-4">
-             <h6 class="mb-3">About OE</h6>
+             <h6 class="mb-3">ÜBER UNS</h6>
              <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Culture</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Mehr über uns</a></li>
+                <li><a href="#">Wie funktioniert das</a></li>
+                <li><a href="#">Neuigkeiten</a></li>
+                <li><a href="#">Karriere</a></li>
+                <li><a href="#">Kontakt</a></li>
              </ul>
           </div>
           <div class="col-md-2 col-6 col-sm-4">
-             <h6 class="mb-3">For Foodies</h6>
+             <h6 class="mb-3">Für Benutzer</h6>
              <ul>
-                <li><a href="#">Community</a></li>
-                <li><a href="#">Developers</a></li>
-                <li><a href="#">Blogger Help</a></li>
-                <li><a href="#">Verified Users</a></li>
-                <li><a href="#">Code of Conduct</a></li>
+                <li><a href="#">AGBs</a></li>
+                <li><a href="#">Impressum</a></li>
+                <li><a href="#">Datenschutz</a></li>
+                <li><a href="#">Login</a></li>
+                <li><a href="#">Regesterieren</a></li>
              </ul>
           </div>
           <div class="col-md-2 m-none col-4 col-sm-4">
-             <h6 class="mb-3">For Restaurants</h6>
+             <h6 class="mb-3">Für Restaurants</h6>
              <ul>
-                <li><a href="#">Advertise</a></li>
-                <li><a href="#">Add a Restaurant</a></li>
-                <li><a href="#">Claim your Listing</a></li>
-                <li><a href="#">For Businesses</a></li>
-                <li><a href="#">Owner Guidelines</a></li>
+                <li><a href="#">Partner werden</a></li>
+                <li><a href="#">Restaurant hinzufügen</a></li>
+                <li><a href="#">Restaurant werben</a></li>
+                <li><a href="#">Hilfe</a></li>
+                <li><a href="#">Affiliatte</a></li>
              </ul>
           </div>
        </div>
