--- a/app/templates/backend/client_templates/edit_product.html
+++ b/app/templates/backend/client_templates/edit_product.html
@@ -22,6 +22,10 @@
         <input type="number" class="form-control" id="price" name="price" value="{{ product.price }}" step="0.01" required>
     </div>
     <div class="mb-3">
+        <label for="tax_rate" class="form-label">Steuersatz (%)</label>
+        <input type="number" class="form-control" id="tax_rate" name="tax_rate" step="0.01" value="{{product.tax_rate}}" required>
+    </div>
+    <div class="mb-3">
         <label for="category_id" class="form-label">Kategorie</label>
         <select class="form-control" id="category_id" name="category_id" required>
             {% for category in categories %}
